@@ -48,6 +48,9 @@
    - markus@cvs.openbsd.org 2002/01/29 23:50:37
      [scp.1 ssh.1]
      mention exit status; ok stevesk@
+   - markus@cvs.openbsd.org 2002/01/31 13:35:11
+     [kexdh.c kexgex.c]
+     cross check announced key type and type from key blob
 
 20020130
  - (djm) Delay PRNG seeding until we need it in ssh-keygen, from markus@
